# bitcoin_analyzer

./: .gitignore  README.md  pyproject.toml
bitcoin_analyzer/: config.py
bitcoin_analyzer/analysis/: blockchain.py  metrics.py  transactions.py  transactions_new.py  transactions_old.py
bitcoin_analyzer/rpc/: client.py  exceptions.py
bitcoin_analyzer/web/: app.py  chart_generator.py
bitcoin_analyzer/web/static/css/: styles.css
bitcoin_analyzer/web/static/js/: chart.js
bitcoin_analyzer/web/templates/: index.html
config/: default.yaml
scripts/: cli.py  inspect_block.py  run_server.py
tests/: conftest.py  test_blockchain.py  test_config.py  test_metrics.py  test_rpc_client.py  test_transactions.py
