[project]
name = "utreyxoracle"
version = "0.1.0"
description = "A Bitcoin RPC client with analysis and web interface"
authors = [
    {name = "Trey Brooks",email = "monroemasseybrooks@gmail.com"}
]
readme = "README.md"
# requires-python = ">=3.9"
# dependencies = [
#     "fastapi (>=0.115.12,<0.116.0)",
#     "uvicorn[standard] (>=0.34.2,<0.35.0)",
#     "jinja2 (>=3.1.6,<4.0.0)"
# ]

[tool.poetry]
packages = [{include = "bitcoin_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
numpy = "^1.24.0"
requests = "^2.31.0"
configobj = "^5.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"

[tool.poetry.scripts]
bitcoin-analyzer = "scripts.run_server:main"
utxoracle = "scripts.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
